--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <header>
-        <div class="logo"><a href="" target="_blank"><img src="https://assets.codepen.io/t-15440/itp-fm-logo2.png"
+        <div class="logo"><a href="" target="_blank"><img src="images/itp-fm-logo2.webp"
                     alt="Farmer's Market, Springdale, Vermont. "></a></div>
         <nav>
             <ul>
